LearningHub.Nhs.WebUI/Styles/nhsuk/layout.scss
@use "../abstracts/all" as *;
@use "nhsuk" as *;

.nhsuk-header {
    padding: 0 px2rem(32);
}

.nhsuk-width-container.app-width-container {
    max-width: px2rem(1208);
    margin: 0 auto;
    padding-left: px2rem(32);
    padding-right: px2rem(32);
}

.nhsuk-header .nhsuk-width-container.app-width-container {
    max-width: px2rem(1144);
    margin: 0 auto;
}

.nhsuk-width-container.app-width-container.beta-banner {
    padding: px2rem(8) px2rem(32);
    max-width: px2rem(1208);
    margin: 0 auto;
}

.nhsuk-header .nhsuk-header__container::after {
    content: none;
}

.nhsuk-header__navigation.app-width-container {
    max-width: px2rem(1144);
}

.app-width-container--full {
    margin: 0;
    max-width: none
}

.app-main-wrapper--no-padding {
    padding: 0
}

.nhsuk-header__container.app-width-container {
    display: flex;
    justify-content: space-between;
    gap: 0 px2rem(24);
    padding: px2rem(16) 0;
}

.nhsuk-header__content {
    display: flex;
    align-items: center;
    min-height: px2rem(40);
    margin-left: auto;
}

.nhsuk-header__logo {
    flex: 1 0 0;
}

.nhsuk-header__logo .nhsuk-header__link--service {
    display: inline-flex;
}

.nhsuk-header__service-name {
    font-size: px2rem(19);
}

.nhsuk-account__login {
    font-size: px2rem(14);
    float: right;
    position: relative;
    z-index: 2;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: px2rem(24);
}

.nhsuk-header__notification-dot {
    position: absolute;
    top: px2rem(8);
    right: px2rem(-10);
    font-size: px2rem(11);
    line-height: px2rem(18);
    font-weight: 900;
    background: $nhsuk-error-color;
    color: white;
    min-width: px2rem(18);
    height: px2rem(18);
    text-align: center;
    border-radius: px2rem(9);
    padding: px2rem(1) px2rem(3) 0;
}

.nhsuk-header__menu {
    display: none;
}

.nhsuk-header__search .nhsuk-search__input {
    width: px2rem(260);
}

.nhsuk-header__search {
    .nhsuk-search__input {
        width: px2rem(260);
    }

    #search > label.nhsuk-u-visually-hidden {
        background-color: $nhsuk-white;
    }
}

.nhsuk-account__login--link,
.nhsuk-account__login--link:visited,
.nhsuk-account__login--link:hover {
    color: #fff;
}

.beta-banner {
    background-color: $color_nhsuk-grey-5;
    color: $nhsuk-text-color;
    padding: px2rem(8) px2rem(16);
    display: flex;
    align-items: center;
    font-family: "Frutiger W01", Arial, sans-serif;
    font-style: normal;
}

.beta-banner + div {
    border-top: 1px solid $color_nhsuk-grey-3;
}

.beta-banner__beta-box {
    background-color: $color_nhsuk-blue;
    color: $color_nhsuk-white;
    font-family: FrutigerLTW01-65Bold,Arial,sans-serif;
    height: px2rem(28);
    margin-right: px2rem(16);
    padding: px2rem(2) px2rem(12) 0;
    display: flex;
    align-items: center;
}

.beta-banner__text {
    display: inline-block;
    font-size: px2rem(16);
}

.nhsuk-footer {
    padding: px2rem(48) 0;
}


#header-dropdown-menu-control {
    opacity: 0;
    position: absolute;
}

#header-dropdown-menu-control:checked ~ .nhsuk-header__navigation:not(.js-show) {
    display: block
}

#header-mobile-search-control {
    display: none;
}

.nhsuk-header__break {
    display: none;
}

.nhsuk-header__mobile-only-nav {
    display: none;
}

.nhsuk-header__mobile-break {
    display: none;
}

.nhsuk-header__navigation-item--current {
    a {
        font-weight: bold;
    }
}

/* large desktop */
@media (min-width: px2rem(990)) {

    .nhsuk-header__navigation-item--current a {
        border-bottom: 4px solid $nhsuk-grey-lighter;
        font-weight: normal;
    }

    .nhsuk-header__navigation-link {
        position: relative;
    }

    .nhsuk-header__navigation-item:last-child {
        margin-right: 16px;
    }
}

/* small desktop */
@media (max-width: px2rem(989)) {

    .nhsuk-header__container {
        flex-wrap: wrap;
    }

    .nhsuk-header {
        padding: 0;
    }

    .nhsuk-header__container.app-width-container {
        flex-wrap: wrap;
        gap: 0 0;
        padding: px2rem(16) px2rem(32);
    }

    .nhsuk-header__link--service {
        align-items: center;
        -ms-flex-align: center;
        margin-bottom: 0;
        width: auto;
    }

    .nhsuk-header__service-name {
        padding-left: px2rem(16);
    }

    .nhsuk-header__logo {
        order: 0;
    }

    .nhsuk-account__login {
        order: 1;
        margin-left: auto;
        margin-right: 0px;
    }

    .nhsuk-header__break {
        display: block;
        width: 100%;
        height: px2rem(24);
        order: 2
    }

    .nhsuk-header__search {
        order: 3;
        flex-grow: 1;
        margin-left: 0;
        margin-right: px2rem(24);
    }

    .nhsuk-header__menu {
        display: block;
        position: relative;
        order: 4;
        flex: 0 0 px2rem(74);
    }

    .nhsuk-header__navigation-list .nhsuk-header__navigation-item,
    .nhsuk-header__navigation .nhsuk-header__navigation-title {
        border-top: 1px solid $color_nhsuk-grey-4;
    }

    .nhsuk-header__menu-toggle {
        text-align: center;
        margin: 0;
        right: 0;
        font-weight: 600;
    }

    .nhsuk-header__search-form {
        display: flex;
    }

    .nhsuk-header__search .nhsuk-search__input {
        flex: 1 0 0;
    }

    #header-dropdown-menu-control:checked ~ .nhsuk-header__navigation:not(.js-show) {
        display: block;
    }

    .nhsuk-header__notification-dot {
        position: absolute;
        top: px2rem(15);
        left: px2rem(115);
        font-size: px2rem(11);
        line-height: px2rem(18);
        font-weight: 900;
        background: $nhsuk-error-color;
        color: $nhsuk-white;
        min-width: px2rem(18);
        width: fit-content;
        height: px2rem(18);
        text-align: center;
        border-radius: px2rem(9);
    }

    .nhsuk-header__navigation-item--current .nhsuk-header__notification-dot {
        left: px2rem(125);
    }

    .nhsuk-header__menu-notification-dot {
        position: absolute;
        top: px2rem(-5);
        right: px2rem(-6);
        background: $nhsuk-error-color;
        width: px2rem(12);
        height: px2rem(12);
        border-radius: px2rem(6);
        box-shadow: 0 0 0 2px white;
        z-index: 10;
    }
}

/* tablet */
@media (max-width: px2rem(768)) {

    .nhsuk-width-container.app-width-container,
    .nhsuk-width-container.app-width-container.beta-banner {
        padding-left: px2rem(16);
        padding-right: px2rem(16);
    }

    .nhsuk-back-link {
        padding: 0.5rem 0;
    }

    .nhsuk-header__menu .nhsuk-header__not-mobile {
        display: none;
    }
}

/* mobile  */
@media (max-width: px2rem(640)) {

    .nhsuk-header__not-mobile {
        display: none;
    }

    .nhsuk-header__logo {
        max-width: none;
    }

    .nhsuk-header__mobile-only-nav {
        display: flex;
        order: 1;
        justify-content: space-around;
        gap: 0 px2rem(16);
        align-items: flex-start;
        flex-wrap: wrap;
        width: px2rem(166);
    }

    .nhsuk-header__pre-login .nhsuk-header__mobile-only-nav {
        align-items: center;
        justify-content: flex-end;
        padding-bottom: px2rem(16);
    }

    .nhsuk-header__mobile-only-nav .nhsuk-header__menu {
        margin-right: px2rem(12);
    }

    .nhsuk-header__mobile-only-nav .nhsuk-header__search-toggle {
        margin-left: px2rem(12);
    }

    .nhsuk-header__break {
        display: none;
    }

    .nhsuk-header__mobile-break {
        display: block;
        width: 100%;
        height: 0;
    }

    .nhsuk-header__link--service {
        flex-direction: column;
        align-items: flex-start;
    }

    .nhsuk-header__notification-dot {
        top: px2rem(13);
        left: px2rem(100);
    }

    .nhsuk-header__service-name {
        padding: px2rem(12) 0 0;
    }

    .nhsuk-header__search-toggle {
        position: relative;
        height: px2rem(40);
        order: 2;
        padding: px2rem(7) px2rem(10) 0;
        margin: 0
    }

    .nhsuk-header__search .nhsuk-search__submit {
        padding-top: nhsuk-spacing(1);
    }

    .nhsuk-header__menu {
        order: 3;
    }

    .nhsuk-header__search {
        order: 4;
        width: 100%;
        flex-grow: 1;
        margin: px2rem(16) px2rem(-16) 0;
        border-bottom: 1px solid $color_nhsuk-grey-4;
    }

    #header-mobile-search-control {
        display: block;
        opacity: 0;
        position: absolute;
    }

    #header-mobile-search-control:checked ~ .nhsuk-header__search .nhsuk-header__search-wrap {
        display: block;
    }

    .nhsuk-width-container.nhsuk-header__container.app-width-container {
        padding-bottom: 0;
    }
}

